--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
 </head>
 <body>
-    Store Custoemr Service Bot
+    Store Customer Service Bot
+    <iframe src="https://webchat.botframework.com/embed/f567c7e9-c4ab-442d-8956-41cb1c8bcffc?s=2X7fglgsIaI.cwA.tEk.EZJfYS7OqMETYdmvkPYCt3h12PpaR41ghs13g9TpnuQ" style="height: 502px; max-height: 502px;"></iframe>
 </body>
 </html>
