--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title></title>
 </head>
 <body>
-    Store Customer Service Bot
-    <iframe src="https://webchat.botframework.com/embed/f567c7e9-c4ab-442d-8956-41cb1c8bcffc?s=2X7fglgsIaI.cwA.tEk.EZJfYS7OqMETYdmvkPYCt3h12PpaR41ghs13g9TpnuQ" style="height: 502px; max-height: 502px;"></iframe>
+    Store Customer Service Bot Demo    
 </body>
 </html>
